java_library(
    name = "merge_sorted_array",
    srcs = [
        "MergeSortedArray.java",
    ],
    deps = [
    ],
)

java_test(
    name = "MergeSortedArrayTest",
    srcs = [
        "MergeSortedArrayTest.java",
    ],
    deps = [
        ":merge_sorted_array",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ],
)
