java_library(
    name = "merge_sorted_array",
    srcs = [
        "MergeSortedArray.java",
    ],
    deps = [
    ],
)

java_test(
    name = "MergeSortedArrayTest",
    srcs = [
        "MergeSortedArrayTest.java",
    ],
    deps = [
        ":merge_sorted_array",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ],
)
java_library(
    name = "remove_element",
    srcs = [
        "RemoveElement.java",
    ],
    deps = [
    ],
)

java_test(
    name = "RemoveElementTest",
    srcs = [
        "RemoveElementTest.java",
    ],
    deps = [
        ":remove_element",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ],
)

java_test(
    name = "MajorityElementTest",
    srcs = [
        "MajorityElementTest.java",
    ],
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ]
)

java_test(
    name = "RansomNoteTest",
    srcs = [
        "RansomNoteTest.java",
    ],
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ]
)

java_test(
    name = "WordPatternTest",
    srcs = [
        "WordPatternTest.java",
    ],
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ]
)

java_test(
    name = "ValidAnagramTest",
    srcs = [
        "ValidAnagramTest.java",
    ],
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ]
)

java_test(
    name = "GroupAnagramsTest",
    srcs = [
        "GroupAnagramsTest.java",
    ],
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ]
)